--- a/consulta.html
+++ b/consulta.html
@@ -34,7 +34,7 @@
       src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
     ></script>
 
-    <script defer src="../../app.js"></script>
+    <script defer src="./app.js"></script>
   </head>
 
   <body onload="handleListBudget()">
@@ -42,7 +42,7 @@
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
-            src="../Assets/logo.png"
+            src="./Assets/logo.png"
             width="50"
             height="35"
             alt="Orçamento pessoal"
