--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- Font Awesome -->
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <script defer src="../../app.js"></script>
+    <script defer src="./app.js"></script>
   </head>
 
   <body>
@@ -37,7 +37,7 @@
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
-            src="../Assets/logo.png"
+            src="./Assets/logo.png"
             width="50"
             height="35"
             alt="Orçamento pessoal"
